SYKFPT-1061: 完成 Task 6.2 全链路 TCK 测试，修复协议字段一致性缺陷，项目全功能交付