@@ -7,9 +7,11 @@ import com.chanjet.connector.api.push.IPushControl;
 import com.chanjet.connector.api.resilience.IResilienceManager;
 import com.chanjet.connector.api.store.IFailStore;
 import com.chanjet.connector.api.store.ILoadBalancer;
+import com.chanjet.connector.api.store.INonceStore;
 import com.chanjet.connector.api.store.IRouteStore;
 import com.chanjet.connector.common.protocol.EventFrame;
 import com.chanjet.connector.core.state.ToleranceManager;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -20,6 +22,7 @@ import org.springframework.web.socket.WebSocketSession;
 import org.springframework.web.socket.client.standard.StandardWebSocketClient;
 import org.springframework.web.socket.handler.TextWebSocketHandler;
 
+import java.util.Collections;
 import java.util.Map;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.LinkedBlockingQueue;
@@ -28,8 +31,8 @@ import java.util.concurrent.TimeUnit;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.atLeastOnce;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 class WebSocketIntegrationTest {
@@ -48,36 +51,42 @@ class WebSocketIntegrationTest {
     @MockBean private IP2PClient p2pClient;
     @MockBean private ILoadBalancer loadBalancer;
     @MockBean private ToleranceManager toleranceManager;
+    @MockBean private INonceStore nonceStore;
+
+    @BeforeEach
+    void setUp() {
+        // 模拟握手鉴权成功
+        when(nonceStore.verifyAndConsume(anyString(), anyString())).thenReturn(true);
+        when(authService.verifySign(anyString(), anyString(), anyString())).thenReturn(true);
+    }
+
+    private String getWsUrl(String clientId, String appKey) {
+        return "ws://localhost:" + port + "/connect?client_id=" + clientId + "&app_key=" + appKey + "&nonce=n1&sign=s1";
+    }
 
     @Test
     void shouldInvokeDomainServicesOnLifecycleEvents() throws Exception {
         String clientId = "lifecycle-client";
         String appKey = "test-app";
-        String wsUrl = "ws://localhost:" + port + "/connect?client_id=" + clientId + "&app_key=" + appKey;
+        String wsUrl = getWsUrl(clientId, appKey);
         
         StandardWebSocketClient client = new StandardWebSocketClient();
-        
-        // 1. 建立连接
         WebSocketSession session = client.execute(new TextWebSocketHandler(), wsUrl).get(5, TimeUnit.SECONDS);
         Thread.sleep(200);
 
-        // 验证：触发了状态机的重连处理
-        verify(toleranceManager).handleReconnect(eq(appKey));
-        // 验证：注册了物理路由
+        verify(toleranceManager).handleReconnect(appKey);
         verify(routeStore).add(eq(appKey), anyString(), eq(clientId));
 
-        // 2. 主动断开连接
         session.close();
         Thread.sleep(200);
-
-        // 验证：清理了物理路由
         verify(routeStore).remove(eq(appKey), anyString(), eq(clientId));
     }
 
     @Test
     void shouldPushMessageToConnectedClient() throws Exception {
         String clientId = "push-client";
-        String wsUrl = "ws://localhost:" + port + "/connect?client_id=" + clientId + "&app_key=test-app";
+        String appKey = "test-app";
+        String wsUrl = getWsUrl(clientId, appKey);
         
         BlockingQueue<String> receivedMessages = new LinkedBlockingQueue<>();
         StandardWebSocketClient client = new StandardWebSocketClient();
@@ -91,7 +100,7 @@ class WebSocketIntegrationTest {
 
         Thread.sleep(200);
         
-        EventFrame frame = new EventFrame("event", "msg-1", "trace-1", "test-app", Map.of(), "hello", System.currentTimeMillis());
+        EventFrame frame = new EventFrame("event", "msg-1", "trace-1", appKey, Collections.emptyMap(), "hello", System.currentTimeMillis());
         boolean pushed = connectionManager.push(clientId, frame);
 
         assertThat(pushed).isTrue();
